kubernetes/deployments/examples/hello-world-nginx/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-webserver
  namespace: rafael-homelab
spec:
  selector:
    app: example-webserver
  ports:
    - port: 80
      targetPort: 80
