kubernetes/deployments/examples/hello-world-nginx/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-webserver-gateway
  namespace: rafael-homelab
spec:
  gatewayClassName: envoy
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "example-webserver.duarte-correia.pt"
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: example-webserver-tls-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-webserver-http
  namespace: rafael-homelab
spec:
  parentRefs:
    - name: example-webserver-gateway
      namespace: rafael-homelab
  hostnames:
    - "example-webserver.duarte-correia.pt"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: example-webserver
          port: 80
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: example-webserver-backend-policy
  namespace: rafael-homelab
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: example-webserver-http
  timeout:
    http:
      connectionIdleTimeout: 300s
      maxConnectionDuration: 300s
      requestTimeout: 300s
